--- a/src/app/user/deposits/deposits.component.css
+++ b/src/app/user/deposits/deposits.component.css
@@ -43,11 +43,12 @@ button {
   background-color: #a205ea;
   color: white;
   border: none;
-  padding: 8px 18px;
+  padding: 6px 18px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: 500;
   transition: background-color 0.2s;
+  height: 35px;
 }
 
 button:hover {
@@ -123,7 +124,6 @@ button:hover {
   }
 }
 
-/* Loader Spinner */
 .spinner {
   width: 45px;
   height: 45px;
