--- a/src/app/admin/verification/verification.component.css
+++ b/src/app/admin/verification/verification.component.css
@@ -193,7 +193,7 @@ button:hover {
   padding: 10px 20px;
   cursor: pointer;
   font-weight: 500;
-  color: #751a9c;
+  color: #950ad1;
   border-radius: 4px 4px 0 0;
   transition: all 0.3s ease;
 }
